--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <body>
       hi mehdi majedi .
+      <hr>
+      <a href="page 1.html">1</a><br>
+      <a href="page 2.html">2</a><br>
+      <a href="page 3.html">3</a><br>
+
 </body>
 </html>
